crates/lang/macro/tests/ui/trait_def/fail/definition_generic.stderr
error: ink! trait definitions must not be generic
 --> $DIR/definition_generic.rs:4:27
  |
4 | pub trait TraitDefinition<T> {
  |                           ^
